fix: restore Java 11 build compatibility
Resolved by Alex